# zpyval

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
tests/: test_active.py  test_age.py  test_email.py  test_gender.py  test_id.py  test_username.py  test_validator.py  test_value.py
zpyval/: validator.py  value.py
