[tool.poetry]
name = "zpyval"
version = "0.1.0"
description = "A package for a domain-centric predefined set of value objects."
authors = ["zathazass <sathananthanit15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
